--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
     height: 100vh;
     width: 100vw;
 
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', sans-serif;
 
     display: grid;
     grid-template-areas: 
@@ -59,7 +59,7 @@ h1 {
 .search-bar input {
     padding: 5px 0 5px 0;
     font-size: 0.8em;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Press Start 2P', sans-serif;
     transition: 0.1s ease;
 }
 
